--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <nav>
-        <a href="pag2.html">Usados</a>
+        <a href="pag2.html">Outros</a>
         
     </nav>
 
