--- a/pag2.html
+++ b/pag2.html
@@ -21,7 +21,7 @@
 
     <main>
         <article>
-            <h1>Usados e Conservado.</h1>
+            <h1>Usados e Conservados.</h1>
 
             <div class="imagem">
                 <img src="ca1-removebg-preview.png">
